<resources>
    <string name="app_name">BeHome</string>
    <string name="Driver">Водій</string>
    <string name="transport_helper">BeHome</string>
    <string name="user_name">Як до вас звертатись?</string>
    <string name="user_number">Ваш номер телефону</string>
    <string name="login_accept_btn">Розміститися</string>
    <string name="waiter">Очікуйте на дзвінок від волонтера та завчасно обговоріть місце зустрічі.</string>
    <string name="finder">Якщо Ви вже сконтактували з волонтером, натисніть на кнопку \"Підтвердити виклик\"</string>
    <string name="confirm">Підтвердити</string>
    <string name="notification">Натисніть на кнопку \"Продовжити\" і Вас буде переміщено на карту. Розмістіть точку там, де Вам буде зручно очікувати машину волонтера.</string>
    <string name="fill_all_fields">Заповніть всі поля</string>
    <string name="your_name">Ваше ім\'я</string>
    <string name="number_example">+380*********</string>
    <string name="Map">Map</string>
    <string name="address">Місце призначення</string>
    <string name="your_info">Ваші дані</string>
    <string name="error">Error</string>
    <string name="click_on_marker">Натисніть на маркер</string>
    <string name="yes">Так</string>
    <string name="no">Ні</string>
    <string name="open_settings">Відкрити налаштування</string>
    <string name="GPS_dont_turn_on">GPS не увімкнений, він необхідний для відображення Вашого місця перебування</string>
    <string name="ignore">Ігнорувати</string>
    <string name="wrong_phone_number">Неправильний номер телефону</string>
    <string name="do_you_want_to_call">Ви бажаєте зателефонувати цій людині?</string>
    <string name="you_dont_set_marker">Ви не поставили маркер</string>
    <string name="put_marker">Щоб поставити маркер, затисніть і утримуйте палець на вибраній точці</string>
    <string name="good">Добре</string>
    <string name="sure_to_delete">Ви впевнені, що бажаєте підтвердити виклик?</string>
    <string name="your_data_from_map">Ваші дані видалені із карти</string>
    <string name="help">Допомога</string>
    <string name="info">Інформація</string>
    <string name="needs">Потреба</string>
    <string name="call">Зателефонувати?</string>

    <string name="blue_marker">Синій маркер позначає людину, котра потребує допомоги. Після натискання на нього
        відкриється вікно з контактними даними. Натиснувши на ім\'я, ви дізнаєтеся про її потреби чи вид допомоги. При потребі зателефонувати натисніть "Так".
        </string>
    <string name="red_marker">Червоний маркер позначає пасажира.
        Ця людина потребує допомоги від водія, котрий може підвезти її до роботи, магазину, лікарні тощо.
        Після натискання на маркер водія, вам відкриється меню з ім\'ям, номером телефону та адресою доставки пасажира.
        Натиснувши на нього, вам буде запропоновано зателефонувати.
    </string>
    <string name="back">Назад</string>
    <string name="developers_1">Дана програма розроблена для тих, хто потребує допомоги, та тих, хто може її надати безкоштовно.
        Допомога може виражатися в купівлі ліків або продуктів літнім людям, в пересуванні по місту: на роботу або до лікарні.
  Якщо ви водій і маєте вільне пасажирське місце у вашому авто, відкрийте карту та перевірте кому в даний момент потрібна допомога.
        Червоні маркери позначають пасажирів, а сині  людей з іншим видом потреб. Лише водій може зателефонувати пасажиру та домовитись про зустріч.
        \n\nЯкщо вам потрібно дістатись до певного місця призначення — натисніть \"Пасажир\", за іншої умови  кнопку \"Допомога\".
        Заповніть інформаційні поля та натисніть \"Продовжити\".
        Вас буде переміщено на карту, де ви фіксуєте місце свого перебування затиснувши та утримуючи маркер протягом кількох секунд.
        Після натискання на  кнопку \"Підтвердити\" Ваші дані будуть збережені та передані на карту для водіїв.
        Після цього ви можете закрити програму. При повторному вході вас буде перенаправлено на вікно з вашими даними.
        Кнопкою \"Підтвердити виклик\" ви видаляєте свій маркер з карти та очікуєте на волентера.
    </string>
    <string name="developers_2">Розробники: Ніщенко Артем та Максименко Олексій. \nРозроблено за підтимки webchain.company.

    </string>
    <string name="developers_3">За допомогою можна звернутися у телеграм групу: t.me/transport_helper</string>
    <string name="your_data">Ваші дані:</string>
    <string name="accept_call">Підтвредити виклик</string>
    <string name="title_activity_volunteer_activity">Map</string>
    <string name="gps_error">Дана програма не буде коректно працювати без дозволу до вашої геолокації</string>
    <string name="allow">Надати доступ</string>
    <string name="t_covid_19">\tНКВолонтери - всеукраїнський волонтерський проект Національного Корпусу по гуманітарній допомозі людям з групи ризику та медпрацівникам в реалізації їхньої праці під час карантину через пандемію коронавірусу (COVID-19).</string>
    <string name="partnerus">Наші партнери</string>
</resources>
