<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.Info_activity"
    android:background="#ECEEF2">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="20dp"
            android:paddingBottom="20dp"
            android:text="@string/info"
            android:textAlignment="center"
            android:textSize="35sp" />
        <TextView
            android:id="@+id/developer_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_weight="1"
            android:text="@string/developers_1"
            android:layout_marginBottom="20dp"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/developer_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/developers_2"
            android:textSize="18sp"
            android:autoLink="web"
            />
        <TextView
            android:id="@+id/developer_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="25dp"
            android:layout_marginLeft="25dp"
            android:layout_weight="1"
            android:text="@string/developers_3"
            android:layout_marginBottom="20dp"
            android:textSize="18sp"
            android:autoLink="web"/>
    </LinearLayout>
</ScrollView>