<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/MyBlue">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Ваші данні:"
            android:textSize="45sp"
            android:paddingLeft="30dp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:paddingTop="10dp"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="70dp">
        <EditText
            android:id="@+id/name_str"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/user_name"
            android:textSize="27sp"
            android:textAlignment="center"
            android:maxLength="20"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="120dp"
        android:paddingRight="15dp"
        tools:ignore="MissingConstraints">
        <EditText
            android:id="@+id/number_str"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:hint="@string/user_number"
            android:textSize="27sp"
            android:textAlignment="center"
            android:maxLength="13"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
    android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingTop="190dp"
        android:paddingRight="15dp"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="25sp"
            android:text="@string/notification"
            android:paddingBottom="15dp"></TextView>
        <Button
            android:id="@+id/set_place_btn"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@drawable/button_set_psg"
            android:text="@string/login_accept_btn"
            android:textSize="25sp"
            android:textAlignment="center"
            android:textColor="@color/MyBlue"
            />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>