<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ECEEF2">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:ignore="MissingConstraints"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:paddingTop="121dp"
                android:text="Ваші дані:"
                android:textAlignment="center"
                android:textColor="@android:color/black"
                android:textSize="35sp"
                android:layout_marginBottom="15dp"
                android:textStyle="normal" />

            <TextView
                android:id="@+id/entered_name_str"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="@string/your_name"
                android:textSize="30sp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textAlignment="center"
                android:maxLength="20"
                android:inputType="none"
                />
            <TextView
                android:id="@+id/entered_number_str"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                android:textAlignment="center"
                android:maxLength="13"
                android:paddingTop="10dp"
                android:inputType="none"
                />
            <TextView
                android:id="@+id/entered_adress_str"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:hint="Ваша адреса"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                android:textSize="30sp"
                android:paddingTop="10dp"
                android:textAlignment="center"
                android:inputType="none"
                />


            <TextView
                android:layout_marginTop="15dp"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:textSize="21sp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:paddingLeft="15dp"
                android:text="@string/waiter"
                android:paddingBottom="10dp"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:paddingBottom="15dp"
                android:layout_marginRight="15dp"
                android:layout_marginLeft="15dp"
                android:text="@string/finder"
                android:textSize="21sp" />
            <Button
                android:layout_marginTop="10dp"
                android:id="@+id/find_car_btn"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:background="@drawable/button_set_psg"
                android:text="Підтвредити виклик"
                android:textSize="22sp"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textColor="@android:color/white"
                android:layout_marginBottom="30dp"
                android:layout_marginRight="20dp"
                android:layout_marginLeft="20dp"
                />
        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>